--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,600;1,100;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Poppins:ital,wght@0,300;0,500;0,600;1,100;1,400;1,500&display=swap');
